Added setting to change menu button position

--- a/ryanshyStyle/index.css
+++ b/ryanshyStyle/index.css
@@ -207,6 +207,10 @@
     height: fit-content;
     width: 100%;
 }
+
+.ryanshy-menu-button-position {
+    overflow: hidden;
+}
 /*
  * saves panel elements
  */
